--- a/themes/kaze/layout/_partial/right-aside.ejs
+++ b/themes/kaze/layout/_partial/right-aside.ejs
@@ -15,4 +15,7 @@
       <%- partial('_partial/archives') %>
     </article>
   <% } %>
+  <article class="card card-content">
+    <img src="https://api2.mubu.com/v3/document_image/2697c6ae-10ee-41a3-9099-304bdb252d31-3807603.jpg">
+  </article>
 </div>
