--- a/themes/kaze/layout/post.ejs
+++ b/themes/kaze/layout/post.ejs
@@ -15,6 +15,9 @@
     </h1>
   </header>
   <div class="post-meta post-show-meta">
+    <a href="https://github.com/shuangxunian/shuangxunian.github.io/tree/server/source/<%- page.source %>" target="_blank">编辑原文</a>
+  </div>
+  <div class="post-meta post-show-meta">
     <time datetime="<%= date_xml(page.date) _%>">
       <i 
         class="iconfont icon-calendar" 
