--- a/themes/kaze/layout/post.ejs
+++ b/themes/kaze/layout/post.ejs
@@ -15,7 +15,7 @@
     </h1>
   </header>
   <div class="post-meta post-show-meta">
-    <a href="https://github.com/shuangxunian/shuangxunian.github.io/tree/server/source/<%- page.source %>" target="_blank">编辑原文</a>
+    <a href="https://github.com/shuangxunian/shuangxunian.github.io/edit/server/source/<%- page.source %>" target="_blank">编辑原文</a>
   </div>
   <div class="post-meta post-show-meta">
     <time datetime="<%= date_xml(page.date) _%>">
