--- a/themes/kaze/layout/post.ejs
+++ b/themes/kaze/layout/post.ejs
@@ -14,9 +14,11 @@
       <%= page.title %>
     </h1>
   </header>
-  <div class="post-meta post-show-meta">
-    <a href="https://github.com/shuangxunian/shuangxunian.github.io/edit/server/source/<%- page.source %>" target="_blank">编辑原文</a>
-  </div>
+  <% if(theme.editedArticle.enable) { %>
+    <div class="post-meta post-show-meta">
+      <a href="<%= theme.editedArticle.gitalk %>/edit/server/source/<%- page.source %>" target="_blank">编辑原文</a>
+    </div>
+  <% } %>
   <div class="post-meta post-show-meta">
     <time datetime="<%= date_xml(page.date) _%>">
       <i 
